--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 	<!-- Bootstrap core CSS -->
 	<link href="./dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+
+<body style="background-image: linear-gradient(#FFFFFF, blue);">
 
 	<!-- NAVBAB -->
 
@@ -23,7 +24,7 @@
 		</button>
 
 		<div class="container ml-auto">
-			<div class="row w-200">
+			<div class="row">
 				<div class="col">
 					<div class="inicio" style="color: white;">
 						<form>
@@ -40,14 +41,20 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="col-12">
+			<div class="col">
 	O Facebook ajuda você a se conectar e <br>
 	compartilhar com as pessoas que fazem parte <br>
-	da sua vida.
+	da sua vida.<img src="inicio.png">
 			</div>
+			<div class="col">
+      Abra uma conta <br>
+		É gratuito e sempre será.
+    </div>
+	
 		</div>
 	</div>
-	<img src="inicio.png">
+
+	
 
 
 
@@ -56,35 +63,6 @@
 	<script src="./assets/js/vendor/popper.min.js"></script>
 	<script src="./dist/js/bootstrap.min.js"></script>
 	<script src="./assets/js/vendor/holder.min.js"></script>
-	<script>
 
-		<!-- Não mexa daqui para baixo!!! -->
-		<script src="./assets/js/vendor/jquery-slim.min.js"></script>
-		<script src="./assets/js/vendor/popper.min.js"></script>
-		<script src="./dist/js/bootstrap.min.js"></script>
-		<script src="./assets/js/vendor/holder.min.js"></script>
-		<script>
-
-      // Example starter JavaScript for disabling form submissions if there are invalid fields
-      (function() {
-      	'use strict';
-
-      	window.addEventListener('load', function() {
-          // Fetch all the forms we want to apply custom Bootstrap validation styles to
-          var forms = document.getElementsByClassName('needs-validation');
-
-          // Loop over them and prevent submission
-          var validation = Array.prototype.filter.call(forms, function(form) {
-          	form.addEventListener('submit', function(event) {
-          		if (form.checkValidity() === false) {
-          			event.preventDefault();
-          			event.stopPropagation();
-          		}
-          		form.classList.add('was-validated');
-          	}, false);
-          });
-      }, false);
-      })();
-  </script>
 </body>
 </html>
