Signed-off-by: dayaisis <isis.camargoamaral@gmail.com>

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link href="./dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body style="background-image: linear-gradient(#FFFFFF, blue);">
+<body style="background-image: linear-gradient(#FFFFFF, #B0C4DE); background-size: cover; background-repeat: no-repeat;">
 
 	<!-- NAVBAB -->
 
@@ -41,17 +41,18 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="col">
+			<div class="col" style="font-weight: bold; color: #191970;">
 	O Facebook ajuda você a se conectar e <br>
 	compartilhar com as pessoas que fazem parte <br>
 	da sua vida.<img src="inicio.png">
 			</div>
+			<div class="col" style="font-weight: bold; color: black;" >
+      <h1>Abra uma conta</h1> <br>
+    	</div>
+			</div>
 			<div class="col">
-      Abra uma conta <br>
-		É gratuito e sempre será.
-    </div>
-	
-		</div>
+			É gratuito e sempre será.
+			</div>
 	</div>
 
 	
