Signed-off-by: dayaisis <isis.camardoamaral@gmail.com>

--- a/index.html
+++ b/index.html
@@ -17,23 +17,22 @@
 	<!-- NAVBAB -->
 
 
-	<nav class="navbar navbar-expand-lg" style="background: #27408B;">
-		<a class="navbar-brand" href="#" style="color: white;">facebook</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-
+	<nav class="navbar navbar-expand-lg" style="background: #3b5998;">
+		<a class="navbar-brand" href="#" style="color: white;"><img src="logo1.png" style="float: left;"></a>
 		<div class="container ml-auto">
 			<div class="row">
-				<div class="col">
-					<div class="inicio" style="color: white;">
-						<form>
-							Email ou telefone
-							<input type="text" name="Email ou telefone"> <br>
-							Senha 
-							<input type="password" name="Senha">
-						</form>
-					</div>
+				<div class="col-4" style="color: white;">
+					<form>
+						Email ou telefone
+						<input type="text" name="Email ou telefone">
+					</form>
+				</div>
+				<div class="col-4" style="color: white;">
+					<form>
+						Senha 
+						<input type="password" name="Senha">
+					</form>
+					<a href="esqueceu.html" style="color: white;">Esqueceu a conta?</a>
 				</div>
 			</div>
 		</div>
@@ -42,17 +41,83 @@
 	<div class="container">
 		<div class="row">
 			<div class="col" style="font-weight: bold; color: #191970;">
-	O Facebook ajuda você a se conectar e <br>
-	compartilhar com as pessoas que fazem parte <br>
-	da sua vida.<img src="inicio.png">
+				O Facebook ajuda você a se conectar e <br>
+				compartilhar com as pessoas que fazem parte <br>
+				da sua vida.
+				<img src="inicio.png">
 			</div>
 			<div class="col" style="font-weight: bold; color: black;" >
-      <h1>Abra uma conta</h1> <br>
-    	</div>
+				<div class="row">
+					<h1>Abra uma conta</h1>
+				</div>
+      			<div class="row">
+      				<p>É gratuito e sempre será.</p>
+      			</div>
+      			<div class="row">
+      				<div class="col">
+	      				<form>
+						   	<input type="text" class="form-control" placeholder="Nome">
+						</form>
+					</div> <br>
+					<div class="col">
+						<form>
+							<input type="text" class="form-control" placeholder="Sobrenome">
+						</form>
+					</div>		
+      			</div> <br>
+      			<div class="row">
+      				<div class="col">
+						<form>
+					      <input type="email" class="form-control" id="inputEmail4" placeholder="Email"> 
+					    </form>   					
+      				</div>
+      			</div> <br>
+      			<div class="row">
+      				<div class="col">
+      					<form>
+      						<input type="password" class="form-control" id="inputPassword4" placeholder="Nova Senha">
+      					</form>
+      				</div>
+      			</div> <br>
+      			<div class="row">
+      				<div class="col">
+      					<h5>Data de Nascimento</h5>
+      				</div>
+      			</div>
+      			<div class="row">
+      				<div class="col-2">
+      					<select class="custom-select custom-select-lg mb-3">
+						  <option selected>1</option>
+						  <option value="1">2</option>
+						  <option value="2">3</option>
+						  <option value="3">4</option>
+						</select>
+      				</div>
+      				<div class="col-2">
+      					<select class="custom-select custom-select-lg mb-3">
+						  <option selected>Jan</option>
+						  <option value="1">Fev</option>
+						  <option value="2">Mar</option>
+						  <option value="3">Abr</option>
+						</select>
+      				</div>
+      				<div class="col-3">
+      					<select class="custom-select custom-select-lg mb-3">
+						  <option selected>2000</option>
+						  <option value="1">2001</option>
+						  <option value="2">2002</option>
+						  <option value="3">2003</option>
+						</select>
+      				</div>
+      				<div class="col-3">
+      					<a href="por que.html">
+      						<p>Por que preciso informar</p>
+      						<p>minha data de nascimento?</p>
+      					</a>
+      				</div>
+      			</div>
 			</div>
-			<div class="col">
-			É gratuito e sempre será.
-			</div>
+		</div>
 	</div>
 
 	
