--- a/paginainicial.html
+++ b/paginainicial.html
@@ -24,7 +24,8 @@
 
 	<nav class="navbar navbar-expand-lg" style="background: #27408B;">
 		<div class="col">
-			<a class="navbar-brand" href="paginainicial.html" style="color: white;"><img src="logo.png" width="150%" height="150%"></a>
+			<a class="navbar-brand" href="paginainicial.html"><img src="icone.png">
+	</a>
 		</div>
 		<div class="col">
 			<div class="input-group">
