Signed-off-by: dayaisis <isis.camargoamaral@gmail.com>

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       			<div class="row">
       				<div class="col">
 						<form>
-					      <input type="email" class="form-control" id="inputEmail4" placeholder="Email"> 
+					      <input type="email" class="form-control" id="inputEmail4" placeholder="Celular ou Email"> 
 					    </form>   					
       				</div>
       			</div> <br>
@@ -86,7 +86,7 @@
       			</div>
       			<div class="row">
       				<div class="col-2">
-      					<select class="custom-select custom-select-lg mb-3">
+      					<select name="Dia">
 						  <option selected>1</option>
 						  <option value="1">2</option>
 						  <option value="2">3</option>
@@ -94,33 +94,60 @@
 						</select>
       				</div>
       				<div class="col-2">
-      					<select class="custom-select custom-select-lg mb-3">
+      					<select name="Mês">
 						  <option selected>Jan</option>
 						  <option value="1">Fev</option>
 						  <option value="2">Mar</option>
 						  <option value="3">Abr</option>
 						</select>
       				</div>
-      				<div class="col-3">
-      					<select class="custom-select custom-select-lg mb-3">
+      				<div class="col-2">
+      					<select name="Ano">
 						  <option selected>2000</option>
 						  <option value="1">2001</option>
 						  <option value="2">2002</option>
 						  <option value="3">2003</option>
 						</select>
       				</div>
-      				<div class="col-3">
-      					<a href="por que.html">
-      						<p>Por que preciso informar</p>
-      						<p>minha data de nascimento?</p>
+      				<div class="col-6">
+      					<a href="por que.html" style="color: #3b5998;">
+      						Por que preciso informar
+      						minha data de nascimento?
       					</a>
+      				</div>
+      				<div class="row">
+      					<div class="col-4">
+      						<div class="form-check">
+ 					 			<input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+  								<label class="form-check-label" for="exampleRadios2">
+    									Feminino
+  								</label>
+							</div>
+						</div>
+					</div>
+					<div class="col-4">
+						<div class="form-check">
+ 					 			<input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+  								<label class="form-check-label" for="exampleRadios2">
+    									Masculino
+  								</label>
+						</div>
+					</div>
+					<div class="row">
+					<div class="col-4">
+						 <p>Ao clicar em Inscreva-se, você concorda com nossos Termos,</p>
+						 <p>Política de Dados e Política de Cookies. Você pode receber</p>
+						 <p>notificações por SMS e pode cancelar isso quando quiser. </p>
+					</div>
+					</div>
+
+      				</div>
       				</div>
       			</div>
 			</div>
 		</div>
 	</div>
 
-	
 
 
 
