Signed-off-by: dayaisis <isis.camrgoamaral@gmail.com>

--- a/inicial.html
+++ b/inicial.html
@@ -7,6 +7,11 @@
 			<meta name="author" content="">
 
 			<title>Facebook - entre ou cadastre-se</title>
+			<style type="text/css">
+    			img{border-radius: 50%;
+    				width: 7%;}
+
+  			</style>
 
 			<!-- Bootstrap core CSS -->
 			<link href="./dist/css/bootstrap.min.css" rel="stylesheet">
@@ -29,14 +34,16 @@
 						</div>
 						<div class="col">
 							<div class="input-group">
-						      <input type="text" class="form-control" placeholder="Pesquisar" aria-label="search"> 
-						      <div class="input-group-append">
-						      	<span class="input-group-text"> <i class="fas fa-search"></i></span>
-						      </div>
-						  	</div>
+								<input type="text" class="form-control" placeholder="Pesquisar" aria-label="Search">
+								<div class="input-group-append">
+									<span class="input-group-text"><i class="fas fa-search"></i></span>
+								</div>
+							</div>
 						</div>
 						<div class="col">
-							<img class="rouded-circle" src="isis.png" alt="generic placeholder image" width="30" height="30"><a class="text-white" href="">Isis</a>
+							<div class="redondo">
+								<img src="isis.png" height="150%" width="150%"><a class="text-white" href="">Isis</a>
+							</div>
 						</div>
 						<div class="col" >
 					</div>
