Signed-off-by: dayaisis <isis.camargoamaral@gmail.com>

--- a/isis.html
+++ b/isis.html
@@ -1,1 +1,80 @@
-isis.html
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="">
+	<meta name="author" content="">
+
+	<title>Facebook - entre ou cadastre-se</title>
+		<style type="text/css">
+    			.redondo{border-radius: 50%;
+    				width: 7%;}
+
+  		</style>
+
+	<!-- Bootstrap core CSS -->
+	<link href="./dist/css/bootstrap.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+	<link href="./dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+
+<body>
+
+
+<!-- NAVBAB -->
+
+
+	<nav class="navbar navbar-expand-lg" style="background: #3b5998;">
+		<div class="container">
+			<div class="row">
+				<div class="col-0">
+					<a class="navbar-brand" href="inicial.html" style="color: white;">
+						<i class="fab fa-facebook"></i>
+					</a>
+				</div>
+				<div class="col-5">
+					<div class="input-group">
+				      <input type="text" class="form-control" placeholder="Pesquisar" aria-label="search"> 
+				      <div class="input-group-append">
+				      	<span class="input-group-text"> <i class="fas fa-search"></i></span>
+				      </div>
+				  	</div>
+				</div>
+				<div class="col-2">
+					<div class="redondo">
+						<img src="isis.png" width="150%"> 
+						<a href="isis.html" style="color: white;">Isis</a>
+					</div>
+				</div>
+				<div class="col-2">
+					<a href="paginainicial.html" style="color: white;">Página Inicial</a>
+				</div>
+				<div class="col-0">
+					<a href="criar.html" style="color: white;">Criar</a>
+				</div>
+			</div>
+			</div>
+		</div>
+	</nav>
+
+<div class="container">
+	<div class="row">
+		<div class="col-12">
+			<img src="capa.jpg" style="width: 80%; height: 70%;">
+		</div>
+	</div>
+</div>
+
+
+
+
+
+<!-- Não mexa daqui para baixo!!! -->
+	<script src="./assets/js/vendor/jquery-slim.min.js"></script>
+	<script src="./assets/js/vendor/popper.min.js"></script>
+	<script src="./dist/js/bootstrap.min.js"></script>
+	<script src="./assets/js/vendor/holder.min.js"></script>
+
+</body>
+</html>
