Signed-off-by: dayaisis <isis.camrgoamaral@gmail.com>

--- a/paginainicial.html
+++ b/paginainicial.html
@@ -31,7 +31,7 @@
 						<i class="fab fa-facebook"></i>
 					</a>
 				</div>
-				<div class="col-5">
+				<div class="col-4">
 					<div class="input-group">
 				      <input type="text" class="form-control" placeholder="Pesquisar" aria-label="search"> 
 				      <div class="input-group-append">
@@ -39,7 +39,7 @@
 				      </div>
 				  	</div>
 				</div>
-				<div class="col-2">
+				<div class="col-1">
 					<div class="redondo">
 						<img src="isis.png" width="150%"> 
 						<a href="isis.html" style="color: white;">Isis</a>
@@ -48,10 +48,30 @@
 				<div class="col-2">
 					<a href="paginainicial.html" style="color: white;">Página Inicial</a>
 				</div>
-				<div class="col-0">
+				<div class="col-1">
 					<a href="criar.html" style="color: white;">Criar</a>
 				</div>
-			</div>
+				<div class="col-1">
+					<a href="users.html" style="color: white;"><i class="fas fa-user-friends"></i></a>
+				</div>
+				<div class="col-0">
+					<a href="mensenger.html" style="color: white;"><i class="fab fa-facebook-messenger"></i></a>
+				</div>
+				<div class="col-1">
+					<a href="help.html" style="color: white;"><i class="fas fa-question-circle"></i></a>
+				</div>
+				<div class="col-1">
+					 <div class="btn-group" role="group">
+					    <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					      
+					    </button>
+					    <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+					      <a class="dropdown-item" href="#">Dropdown link</a>
+					      <a class="dropdown-item" href="#">Dropdown link</a>
+					    </div>
+					  </div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</nav>
