--- a/isis.html
+++ b/isis.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 
-	<title>Facebook - entre ou cadastre-se</title>
+	<title>Isis Amaral</title>
 		<style type="text/css">
     			.redondo{border-radius: 50%;
     				width: 7%;}
@@ -62,6 +62,13 @@
 	<div class="row">
 		<div class="col-12">
 			<img src="capa.jpg" style="width: 80%; height: 70%;">
+		<div class="row">
+			<div class="col-12">
+				<nav class="navbar navbar-light bg-light">
+  				<a class="navbar-brand" href="#">Navbar</a>
+				</nav>
+			</div>
+		</div>
 		</div>
 	</div>
 </div>
