Signed-off-by: dayaisis <isis.amaralcamargo@gmail.com>

--- a/paginainicial.html
+++ b/paginainicial.html
@@ -7,25 +7,20 @@
 	<meta name="author" content="">
 
 	<title>Facebook</title>
-	<style type="text/css">
-    			img{border-radius: 50%;
-    				width: 7%;}
-
-  			</style>
 
 	<!-- Bootstrap core CSS -->
 	<link href="./dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 
-<body>
+<body style="background-color: #e9ebee;">
 
 	<!-- NAVBAB -->
 
 
 	<nav class="navbar navbar-expand-lg" style="background: #3b5998;">
 		<div class="container">
-			<div class="row">
+			<div class="row"> 
 				<div class="col-0">
 					<a class="navbar-brand" href="inicial.html" style="color: white;">
 						<i class="fab fa-facebook"></i>
@@ -40,10 +35,8 @@
 				  	</div>
 				</div>
 				<div class="col-1">
-					<div class="redondo">
-						<img src="isis.png" width="150%"> 
-						<a href="isis.html" style="color: white;">Isis</a>
-					</div>
+					<img src="isis.png" style=" border-radius: 150%; width: 35%;"> 
+					<a href="isis.html" style="color: white;"> Isis </a>
 				</div>
 				<div class="col-2">
 					<a href="paginainicial.html" style="color: white;">Página Inicial</a>
@@ -62,12 +55,15 @@
 				</div>
 				<div class="col-1">
 					 <div class="btn-group" role="group">
-					    <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					      
+					    <button id="btnGroupDrop1" type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color:#3b5998;">
 					    </button>
 					    <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-					      <a class="dropdown-item" href="#">Dropdown link</a>
-					      <a class="dropdown-item" href="#">Dropdown link</a>
+					      <a class="dropdown-item" href="#">Novo Grupo</a>
+					      <a class="dropdown-item" href="#">Publicidade no Facebook</a>
+					      <a class="dropdown-item" href="#">Registro de Atividade</a>
+					      <a class="dropdown-item" href="#">Preferências do Feed de Notícias</a>
+					      <a class="dropdown-item" href="#">Configurações</a>
+					      <a class="dropdown-item" href="#">Sair</a>
 					    </div>
 					  </div>
 					</div>
@@ -75,6 +71,72 @@
 			</div>
 		</div>
 	</nav>
+	<div class="container-fluid">
+		<div class="row"> 
+			<div class="col" style="width: 50%;"></div>
+			<div class="col" style="width: 10%;">
+				<div class="row">
+					<div class="redondo">
+						<img src="isis.png" width="50%" style="border-radius: 150%; width: 9%;"> 
+						<a href="isis.html" style="color: black;">Isis Amaral</a>
+					</div>
+				</div>
+				<div class="row">
+					<div class="Feed">
+						<img src="Facebook.png">
+						<a href="paginainicial.html" style="color: black;">Feed Notícias</a>
+					</div>
+				</div>
+				<div class="row">
+					<div class="mensenger">
+						<i class="fab fa-facebook-messenger" style="color: #1E90FF; size: 9%;"></i>
+						<a href="messenger.html" style="color: black;">Messenger</a>
+					</div>
+				</div>
+				<div class="row">
+					<div class="store">
+						<img src="store.png">
+						<a href="store.html" style="color: black;">Marketplace</a>
+					</div>
+				</div>
+				<div class="row">
+					<h6 style="color: #696969;">Atalhos</h6>
+				</div>
+				<div class="row">
+					<img src="book.png">
+					<a href="book" style="color: black;">Língua Portuguesa </a>
+				</div>
+				<div class="row">
+					<h6 style="color: #696969;">Explorar</h6>
+				</div>
+				<div class="row">
+					<img src="grupo.png">
+					<a href="grupo.html" style="color: black;">Grupos</a>
+				</div>
+				<div class="row">
+					<img src="pagina.png">
+					<a href="pagina.html" style="color: black;">Página</a>
+				</div>
+				<div class="row">
+					<img src="eventos.png">
+					<a href="eventos.html" style="color: black;">Eventos</a>
+				</div>
+				<div class="row">
+					<img src="salvos.png">
+					<a href="salvos.html" style="color: black;">Salvos</a>
+				</div>
+				<div class="row">
+					<img src="jogos.png">
+					<a href="jogos.html" style="color: black;">Jogos</a>
+				</div>
+			</div>
+			<div class="col"></div>
+			<div class="col"></div>
+			<div class="col"></div>
+			<div class="col"></div>
+		</div>
+		
+	</div>
 
 
 
