Signed-off-by: dayaisis <isis.camargoamaral@gmail.com>

--- a/isis.html
+++ b/isis.html
@@ -19,7 +19,7 @@
 	<link href="./dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body>
+<body style="background-color: #e9ebee;">
 
 
 <!-- NAVBAB -->
@@ -43,7 +43,7 @@
 				</div>
 				<div class="col-2">
 					<div class="redondo">
-						<img src="isis.png" width="150%"> 
+						<img src="isis.png" width="160%"> 
 						<a href="isis.html" style="color: white;">Isis</a>
 					</div>
 				</div>
@@ -61,12 +61,24 @@
 <div class="container">
 	<div class="row">
 		<div class="col-12">
-			<img src="capa.jpg" style="width: 80%; height: 70%;">
-		<div class="row">
+			<img src="capa.jpg" style="width: 80%; height: 40%;">
+		<div class="row" >
 			<div class="col-12">
-				<nav class="navbar navbar-light bg-light">
-  				<a class="navbar-brand" href="#">Navbar</a>
-				</nav>
+				<div class="row" style="background-color: white;">
+					<div class="col">
+					Linha do Tempo
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col" style="margin-top: -210px;">
+					<img src="isis.png" style="height: 35%; border: 5px solid white; margin-left: 35px; margin-bottom: 30px; margin-top: 10px;">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col" style="margin-top: -75px; color: white; margin-left: 20px; font-family: Arial; font-weight: bold; font-size: 27px;">
+					Isis Amaral
+				</div>
 			</div>
 		</div>
 		</div>
