Signed-off-by: dayaisis <isis.amaralcamargo@gmail.com>

--- a/paginainicial.html
+++ b/paginainicial.html
@@ -47,13 +47,16 @@
 				<div class="col-1">
 					<a href="users.html" style="color: white;"><i class="fas fa-user-friends"></i></a>
 				</div>
-				<div class="col-0">
+				<div class="col-1">
 					<a href="mensenger.html" style="color: white;"><i class="fab fa-facebook-messenger"></i></a>
 				</div>
 				<div class="col-1">
+					<a href="notificações.html" style="color: white;"><i class="fas fa-bell"></i></a>
+				</div>
+				<div class="col-0">
 					<a href="help.html" style="color: white;"><i class="fas fa-question-circle"></i></a>
 				</div>
-				<div class="col-1">
+				<div class="col-0">
 					 <div class="btn-group" role="group">
 					    <button id="btnGroupDrop1" type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color:#3b5998;">
 					    </button>
@@ -72,7 +75,7 @@
 		</div>
 	</nav>
 	<div class="container-fluid">
-		<div class="row"> 
+		<div class="row my-3"> 
 			<div class="col" style="width: 50%;"></div>
 			<div class="col" style="width: 10%;">
 				<div class="row">
@@ -81,56 +84,112 @@
 						<a href="isis.html" style="color: black;">Isis Amaral</a>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row my-1">
 					<div class="Feed">
 						<img src="Facebook.png">
 						<a href="paginainicial.html" style="color: black;">Feed Notícias</a>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row my-1">
 					<div class="mensenger">
 						<i class="fab fa-facebook-messenger" style="color: #1E90FF; size: 9%;"></i>
 						<a href="messenger.html" style="color: black;">Messenger</a>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row my-1">
 					<div class="store">
 						<img src="store.png">
 						<a href="store.html" style="color: black;">Marketplace</a>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row my-1">
 					<h6 style="color: #696969;">Atalhos</h6>
 				</div>
-				<div class="row">
+				<div class="row my-1">
 					<img src="book.png">
 					<a href="book" style="color: black;">Língua Portuguesa </a>
 				</div>
-				<div class="row">
+				<div class="row my-1">
 					<h6 style="color: #696969;">Explorar</h6>
 				</div>
-				<div class="row">
+				<div class="row my-1">
 					<img src="grupo.png">
 					<a href="grupo.html" style="color: black;">Grupos</a>
 				</div>
-				<div class="row">
+				<div class="row my-1">
 					<img src="pagina.png">
 					<a href="pagina.html" style="color: black;">Página</a>
 				</div>
-				<div class="row">
+				<div class="row my-1">
 					<img src="eventos.png">
 					<a href="eventos.html" style="color: black;">Eventos</a>
 				</div>
-				<div class="row">
+				<div class="row my-1">
 					<img src="salvos.png">
 					<a href="salvos.html" style="color: black;">Salvos</a>
 				</div>
-				<div class="row">
+				<div class="row my-1">
 					<img src="jogos.png">
 					<a href="jogos.html" style="color: black;">Jogos</a>
 				</div>
 			</div>
-			<div class="col"></div>
+			<div class="col">
+				<div class="row my-4">
+					<div class="card" style="width: 35rem;">
+					  <div class="card-header">
+					    <i class="fas fa-pencil-alt"></i> Criar publicação 
+					    <i class="fas fa-images"></i> Álbum de foto/vídeos
+					    <i class="fas fa-video"></i> Vídeo ao gol
+					  </div>
+					  <ul class="list-group list-group-flush">
+					    <li class="list-group-item">
+							<div class="row">
+								<div class="col-4">
+									<img src="isis.png" width="50%" style="border-radius: 150%; width: 19%;">
+								</div>
+								<div class="col-8" style="float: right;">
+									<h6 style="color: grey;">No que você está pensando, Isis? </h6>
+								</div>
+							</div>
+					    </li>
+					    <li class="list-group-item">
+					    	<div class="row">
+					    		<div class="col">
+					    			<img src="img.png"> Foto/vídeo
+					    		</div>
+					    		<div class="col">
+					    			<img src="img2.png"> Marcar Amigos
+					    		</div>
+					    		<div class="col">
+					    			<img src="img3.png"> Sentimentos/a...
+					    		</div>
+					    	</div>
+					    </li>
+					  </ul>
+					</div>
+				</div>
+				<div class="row my-4">
+					<div class="card-body" style="background-color: white;">
+						<img src="alyssa.jpg" width="50%" style="border-radius: 150%; width: 10%;">
+						<a href="alyssa.html" style="color: #3b5998;"><b>Alyssa Barbosa</b></a> Compartilhou uma publicação.
+					    <h5 class="card-title">Card title</h5>
+					    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					  </div>
+					<div class="card" style="width: 35rem;">
+					  <img class="card-img-top" src="feed1.png" alt="Card image cap">
+					  <ul class="list-group list-group-flush">
+					    <li class="list-group-item">Cras justo odio</li>
+					    <li class="list-group-item">Dapibus ac facilisis in</li>
+					    <li class="list-group-item">Vestibulum at eros</li>
+					  </ul>
+					  <div class="card-body">
+					    <a href="#" class="card-link">Card link</a>
+					    <a href="#" class="card-link">Another link</a>
+					  </div>
+				</div>
+				</div>
+				
+			</div>
 			<div class="col"></div>
 			<div class="col"></div>
 			<div class="col"></div>
