Signed-off-by: dayaisis <isis.camargoamaral@gmail.com>

--- a/paginainicial.html
+++ b/paginainicial.html
@@ -134,12 +134,12 @@
 				</div>
 			</div>
 			<div class="col">
-				<div class="row my-4">
+				<div class="row my-3">
 					<div class="card" style="width: 35rem;">
 					  <div class="card-header">
 					    <i class="fas fa-pencil-alt"></i> Criar publicação 
 					    <i class="fas fa-images"></i> Álbum de foto/vídeos
-					    <i class="fas fa-video"></i> Vídeo ao gol
+					    <i class="fas fa-video"></i> Vídeo ao vivo
 					  </div>
 					  <ul class="list-group list-group-flush">
 					    <li class="list-group-item">
@@ -168,27 +168,100 @@
 					  </ul>
 					</div>
 				</div>
-				<div class="row my-4">
+				<div class="row my-3">
 					<div class="card-body" style="background-color: white;">
 						<img src="alyssa.jpg" width="50%" style="border-radius: 150%; width: 10%;">
-						<a href="alyssa.html" style="color: #3b5998;"><b>Alyssa Barbosa</b></a> Compartilhou uma publicação.
-					    <h5 class="card-title">Card title</h5>
-					    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					  </div>
+						<a href="alyssa.html" style="color: #3b5998;"><b>Alyssa Barbosa</b></a> Compartilhou uma <a href="publicação.html" style="color: #3b5998;">publicação.</a>
+					</div>
 					<div class="card" style="width: 35rem;">
 					  <img class="card-img-top" src="feed1.png" alt="Card image cap">
-					  <ul class="list-group list-group-flush">
-					    <li class="list-group-item">Cras justo odio</li>
-					    <li class="list-group-item">Dapibus ac facilisis in</li>
-					    <li class="list-group-item">Vestibulum at eros</li>
-					  </ul>
-					  <div class="card-body">
-					    <a href="#" class="card-link">Card link</a>
-					    <a href="#" class="card-link">Another link</a>
-					  </div>
+					  <ul class="list-group ">
+					    <li class="list-group-item">
+					    	<a href="tudogostoso.html" style="color: #3b5998;"><b>TUDO GOSTOSO</b></a>
+					    	<button class="btn" type="submit" style="float: right; color: white;"><i class="far fa-thumbs-up" style="color: black;"></i> <a style="color: black;">Curtir Página</a></button> 
+					    	<br> <br>
+					    	<img src="r1.png">
+					    	<img src="r2.png" style="float: right;">
+					    </li>
+					    <li class="list-group-item">
+					    	<div class="row">
+					    		<div class="col-4">
+					    			<a style="color: grey;"><i class="far fa-thumbs-up" style="color: grey;"></i> Curtir</a>
+					    		</div>
+					    		<div class="col-4">
+					    			<a style="color: grey;"><i class="far fa-comment-alt" style="color: grey;"></i> Comentar</a>
+					    		</div>
+					    		<div class="col-4">
+					    			<a style="color: grey;"><i class="fas fa-share" style="color: grey;"></i> Comentar</a>
+					    		</div>
+					    	</div>
+					    </li>
+					    <li class="list-group-item">
+					    	<div class="row">
+					    		<div class="col-1 mx-1">
+					    			<img src="isis.png" width="50%" style="border-radius: 150%; width: 45px;">
+					    		</div>
+					    		<div class="col">
+					    			<div class="input-group">
+								      <input type="text" class="form-control" placeholder="Escreva um comentário" aria-label="search" style="background-color: #e9ebee;"> 
+								      <div class="input-group-append">
+								      	<span class="input-group-text"><img src="r3.png"></span>
+								      </div>
+								  	</div>
+					    		</div>
+					    	</div>
+					    </li>
+					  </ul> 
+					</div>
 				</div>
+				<div class="row my-3">
+					<div class="card-body" style="background-color: white;">
+						<img src="brayan.jpg" width="50%" style="border-radius: 150%; width: 10%;">
+						<a href="alyssa.html" style="color: #3b5998;"><b>Caio Duarte</b></a> Compartilhou uma <a href="publicação.html" style="color: #3b5998;">publicação.</a> <br>
+						<img src="r5.png" width="50%" style="border-radius: 150%; width: 10%;">
+						<a href="alyssa.html" style="color: #3b5998;"><b>Tudo Gostoso</b></a> 
+					</div>
+					<div class="card" style="width: 35rem;">
+					  <img class="card-img-top" src="r4.jpg" alt="Card image cap">
+					  <ul class="list-group ">
+					    <li class="list-group-item">
+					    	<a href="tudogostoso.html" style="color: #3b5998;"><b>TUDO GOSTOSO</b></a>
+					    	<button class="btn" type="submit" style="float: right; color: white;"><i class="far fa-thumbs-up" style="color: black;"></i> <a style="color: black;">Curtir Página</a></button> 
+					    	<br> <br>
+					    	<img src="r6.png">
+					    	<img src="r7.png" style="float: right;">
+					    </li>
+					    <li class="list-group-item">
+					    	<div class="row">
+					    		<div class="col-4">
+					    			<a style="color: grey;"><i class="far fa-thumbs-up" style="color: grey;"></i> Curtir</a>
+					    		</div>
+					    		<div class="col-4">
+					    			<a style="color: grey;"><i class="far fa-comment-alt" style="color: grey;"></i> Comentar</a>
+					    		</div>
+					    		<div class="col-4">
+					    			<a style="color: grey;"><i class="fas fa-share" style="color: grey;"></i> Comentar</a>
+					    		</div>
+					    	</div>
+					    </li>
+					    <li class="list-group-item">
+					    	<div class="row">
+					    		<div class="col-1 mx-1">
+					    			<img src="isis.png" width="50%" style="border-radius: 150%; width: 45px;">
+					    		</div>
+					    		<div class="col">
+					    			<div class="input-group">
+								      <input type="text" class="form-control" placeholder="Escreva um comentário" aria-label="search" style="background-color: #e9ebee;"> 
+								      <div class="input-group-append">
+								      	<span class="input-group-text"><img src="r3.png"></span>
+								      </div>
+								  	</div>
+					    		</div>
+					    	</div>
+					    </li>
+					  </ul> 
+					</div>
 				</div>
-				
 			</div>
 			<div class="col"></div>
 			<div class="col"></div>
