Signed-off-by: dayaisis <isis.camargoamaral>

--- a/paginainicial.html
+++ b/paginainicial.html
@@ -75,7 +75,7 @@
 		</div>
 	</nav>
 	<div class="container-fluid">
-		<div class="row my-3"> 
+		<div class="row my-2"> 
 			<div class="col" style="width: 50%;"></div>
 			<div class="col" style="width: 10%;">
 				<div class="row">
@@ -144,10 +144,10 @@
 					  <ul class="list-group list-group-flush">
 					    <li class="list-group-item">
 							<div class="row">
-								<div class="col-4">
-									<img src="isis.png" width="50%" style="border-radius: 150%; width: 19%;">
+								<div class="col-1">
+									<img src="isis.png" width="90px" style="border-radius: 90px; width: 40px;">
 								</div>
-								<div class="col-8" style="float: right;">
+								<div class="col-11" style="float: right;">
 									<h6 style="color: grey;">No que você está pensando, Isis? </h6>
 								</div>
 							</div>
@@ -263,9 +263,82 @@
 					</div>
 				</div>
 			</div>
+			<div class="col my-3 mx-2" style="width: 50%;">
+				<div class="card" style="width: 20rem;">
+				  <div class="card-body">
+				  	<div class="row">
+				  		<div class="col">
+					  		<a href="stories.html" style="color: grey;"><b>Stories</b></a>
+					  		<a href="stories.html" style="color:#3b5998;">Itens arqu...</a>
+					  		<a href="stories.html" style="color:#3b5998;">Configurações</a>
+				  		</div>
+				  	</div>
+				  	<div class="row">
+				  		<div class="col-2">
+				  			<img src="emily.jpg" width="50%" style="border-radius: 50%; width: 50px;">
+				  		</div>
+				  		<div class="col-10" style="color: grey;">
+				  			<a href="alyssa.html" style="color: #3b5998;">Emily Ferreira</a> <br>
+				  			Há 4 horas
+				  		</div>
+				  		<div class="col-2">
+				  			<img src="guilherme.jpg" width="50%" style="border-radius: 50%; width: 50px;">
+				  		</div>
+				  		<div class="col-10" style="color: grey;">
+				  			<a href="alyssa.html" style="color: #3b5998;">Guilherme Henrique</a> <br>
+				  			Há 20 horas
+				  		</div>
+				  		<div class="col-2">
+				  			<img src="isadora.jpg" width="50%" style="border-radius: 50%; width: 50px;">
+				  		</div>
+				  		<div class="col-10" style="color: grey;">
+				  			<a href="isadora.html" style="color: #3b5998;">Isadora Jhoe</a> <br>
+				  			Há 27 minutos
+				  		</div>
+				  		<div class="col-2">
+				  			<img src="kauan.jpg" width="50%" style="border-radius: 50%; width: 50px;">
+				  		</div>
+				  		<div class="col-10" style="color: grey;">
+				  			<a href="isadora.html" style="color: #3b5998;">Kauãn Lima</a> <br>
+				  			Há 31 minutos
+				  		</div>
+				  	</div>
+				  </div>
+				</div>
+			</div>
 			<div class="col"></div>
-			<div class="col"></div>
-			<div class="col"></div>
+			<div class="col">
+				<div class="row">
+					<div class="col-3">
+				  		<img src="isadora.jpg" width="50%" style="border-radius: 50%; width: 50px;">
+				  	</div>
+					<div class="col-9" style="color: grey;">
+				  		<a href="isadora.html" style="color: #3b5998;">Isadora Jhoe</a> 
+				  		<img src="capturar.png">
+				  	</div>
+				  	<div class="col-3">
+				  		<img src="kauan.jpg" width="50%" style="border-radius: 50%; width: 50px;">
+			  		</div>
+			  		<div class="col-9" style="color: grey;">
+			  			<a href="isadora.html" style="color: #3b5998;">Kauãn Lima</a> 
+			  			<img src="capturar.png">
+			  		</div>
+			  		<div class="col-3">
+			  			<img src="guilherme.jpg" width="50%" style="border-radius: 50%; width: 50px;">
+			  		</div>
+			  		<div class="col-9" style="color: grey;">
+			  			<a href="alyssa.html" style="color: #3b5998;">Guilherme Her...</a> 
+			  			<img src="capturar.png">
+			  		</div>
+			  		<div class="col-2">
+			  			<img src="emily.jpg" width="50%" style="border-radius: 50%; width: 50px;">
+			  		</div>
+			  		<div class="col-10" style="color: grey;">
+			  			<a href="alyssa.html" style="color: #3b5998;">Emily Ferreira</a> 
+			  			<img src="capturar.png">
+			  		</div>
+			</div>
+			</div>
 		</div>
 		
 	</div>
